feat: agregar documentación del metodo scan
